[package]
name = "crosskey"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
whoami = "1.4"
sysinfo = "0.30"
signal-hook = "0.3"
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.26", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading"] }